--- a/k8s/crds/exporter.crd.yaml
+++ b/k8s/crds/exporter.crd.yaml
@@ -20,7 +20,7 @@ spec:
     singular: exporter
     shortNames:
       - exp
-  scope: Namespaced
+  scope: Cluster
   versions:
     - name: v1alpha1
       served: true
